// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conversion card component renders correctly 1`] = `
"<View style={{...}}>
  <Component small={true} style={{...}}>
    ZIL
    ETH
  </Component>
  <Connect(ConvertComponent) from=\\"ZIL\\" to=\\"ETH\\" amount={1} />
  <Component small={true} style={{...}}>
    0.0216
  </Component>
</View>"
`;

exports[`conversion card component renders correctly negative values 1`] = `
"<View style={{...}}>
  <Component small={true} style={{...}}>
    ZIL
    ETH
  </Component>
  <Connect(ConvertComponent) from=\\"ZIL\\" to=\\"ETH\\" amount={1} />
  <Component small={true} style={{...}}>
    -0.0216
  </Component>
</View>"
`;
